<resources>
    <string name="app_name">PopReach Test</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="triangle">Triangle</string>
    <string name="previous">Previous</string>
    <string name="undo">Undo</string>
    <string name="stats">Stats</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete">Delete</string>
</resources>